Added files and changes required for deployment

--- a/iuSystem/.env
+++ b/iuSystem/.env
@@ -1,5 +1,7 @@
 # SECURITY WARNING: keep the secret key used in production secret!
-SECRET_KEY=django-insecure-utt^mym1jaaag5ptz3ddy25kb2f-!hb*ygk1yj&gp6k@yj*mdi
+#SECRET_KEY=django-insecure-utt^mym1jaaag5ptz3ddy25kb2f-!hb*ygk1yj&gp6k@yj*mdi
+
+SECRET_KEY=mX7VVs90WG-cHwPfd49sAA_Ofn1tCFuYmS4cFxY5JX0NjL-ippg
 
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG=False
